<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutputActivity">

<!--    Кнопка "Назад"-->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5sp"
        android:onClick="goToMain"
        android:text="@string/back"
        app:cornerRadius="0dp" />

<!--    Заголовок списку справ-->
    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBack"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="Title" />

<!--    Макет для розміщення кнопок сортування-->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/titleName"
        android:orientation="horizontal">

<!--        Кнопка сортування за назвою-->
        <Button
            android:id="@+id/sortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_marginHorizontal="1dp"
            android:textSize="12sp"
            android:text="Назва"
            android:onClick="sortName"
            app:cornerRadius="0dp" />

<!--        Кнопка сортування за датою-->
        <Button
            android:id="@+id/sortTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="1dp"
            android:textSize="12sp"
            android:text="Дата"
            android:onClick="sortDate"
            app:cornerRadius="0dp" />

<!--        Кнопка сортування за виконанням-->
        <Button
            android:id="@+id/sortIsDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginHorizontal="1dp"
            android:textSize="12sp"
            android:text="Виконано"
            android:onClick="sortIsDone"
            app:cornerRadius="0dp" />
    </LinearLayout>



<!--    <LinearLayout-->
<!--        android:id="@+id/layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@+id/textView2"-->
<!--        android:layout_above="@+id/layout1"-->
<!--        android:layout_marginHorizontal="15dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:orientation="vertical">-->

<!--        <ListView-->
<!--            android:id="@+id/listView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->
<!--    </LinearLayout>-->

<!--    Вигляд для списку справ-->
    <ListView
        android:id="@+id/affairList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/newTitle"
        android:layout_below="@+id/buttons"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="-1dp" />

<!--    Макет для розміщення елементів для додавання нової справи-->
    <LinearLayout
        android:id="@+id/newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

<!--        Поле для вводу назви-->
        <EditText
            android:id="@+id/newNameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:maxLength="30"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enterName"/>

<!--        Поле для вводу дати-->
        <EditText
            android:id="@+id/newDateEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="date"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/date"/>

<!--        Кнопка "+"-->
        <Button
            android:id="@+id/titleAddBtn"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:onClick="addAffair"
            android:text="+" />


    </LinearLayout>

</RelativeLayout>